# go/model_result_status.go
@@ -8,10 +8,19 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
+// ResultStatus : Rezultāta statuss. Iespējams tiks Balstīts uz FHIR vērtībām (skatīt arī izmantotos kanoniskos statusus katram apakšstatusam)https://www.hl7.org/fhir/valueset-diagnostic-report-status.html
+type ResultStatus string
 
-type Phone struct {
-
-	AreaCode int32 `json:"areaCode,omitempty"`
-
-	PhoneNumber int32 `json:"phoneNumber,omitempty"`
-}
+// List of ResultStatus
+const (
+	REGISTERED ResultStatus = "registered"
+	PARTIAL ResultStatus = "partial"
+	PERLIMINARY ResultStatus = "perliminary"
+	FINAL ResultStatus = "final"
+	AMENDED ResultStatus = "amended"
+	CORRECTED ResultStatus = "corrected"
+	APPENDED ResultStatus = "appended"
+	CANCELLED ResultStatus = "cancelled"
+	ENTERED_IN_ERROR ResultStatus = "entered-in-error"
+	UNKOWN ResultStatus = "unkown"
+)
